--- a/ScintillaNet FindReplaceDialog/FindReplace/IncrementalSearcher.resx
+++ b/ScintillaNet FindReplaceDialog/FindReplace/IncrementalSearcher.resx
@@ -117,6 +117,71 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>107, 17</value>
+  </metadata>
+  <data name="imageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACo
+        DAAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACAAB/wHw
+        AfcB7QGSAe0BkgHtAQcB9QMAAfMBGQG8B/MB/wgAAf8B8AH3Ae0BtQHvAZIB7QEHAfUEAAH/AfQB/wgA
+        BP8DAAGRAa4B9AEAAe8BbAH/AQAB7wFsAfMCAAH1AbQBbAH3AfMBvAHvAf8LAAGRAa4B9AUAAe8BbAHz
+        AwAB8QH3AfIB/wYAAf8B9AEHAe8B/wEAAfQBkQG8AgAB9AKLAQcCAAHzAe0B8wIAAQcFbAEHCQAB9AGR
+        AbwIAAHzAe0B8wIAAfAB7AGSAfIB/wQAAf8B9AEHAewB9wH0AQAB7wEHAgAB/wGLAZEBCQGLAfUCAAHz
+        AWwB9QEAAfMEbAKLAfEIAAHvAQcKAAHzAWwB9QEAAf8BvAHsAZIB8gH/AgAB/wH0AQcB7AHvAfQB/wH0
+        AZEDAAEHAYsBCQEZAbQBrgH/AgAB7wEHAQAB9ANsAa4BCQG7AYsB8QYAAfQBkQwAAe8BBwEAAv8BvAHs
+        AZIB8gH/AQAB9AEHAewB7wH0Af8BAAHvAfACAAH1AYsBCQIZAQkBbAEHAwAB7QEAAfMCbAGLAQkCGQG7
+        AYsB9QUAAe8B8AH3Cu0B9wEAAe0CAAL/AbwB7AGSAfIB/wEHAewB9wH0Af8CAAGLAfMBAAH/Aa4BkQQZ
+        AbsBiwH0AgABkgEAAfQBrgGLAQkEGQG0AYsB9AQAAYsB8wH3AYsItAGLAa4BAAGSAwAC/wG8AuwBBwHs
+        AZIB9AH/AwABbAH1AQABBwFsAQkFGQGRAYsB/wEAAe8DAAGRAYsBCQQZApEEAAFsAfUBAAGuAbQGGQG7
+        AWwB8QEAAe8FAAH/AbwD7AH0BQABbAL0AYsBuwYZAQkBiwEHAQABtQMAAfUB9wGuAQkEGQGRAe0B/wIA
+        AWwB9AEAAfEBbAG7BRkBrgH3Af8BAAG1BAAB/wH0AQcD7AHyAf8EAAGuAfMBiwpsAYsBAAHtBQAB7wFs
+        AQkDGQEJAYsB7wIAAa4B8wIAAe0BrgQZAbQBrgMAAe0DAAH/AfQBBwHsAZIBBwHsAZIB8gH/AwABvAEH
+        AfIL8QH0AfcFAAH/AQcBiwG7AxkBCQGLAQcB/wG8AQcCAAH/Aa4BtAIZAQkBbAHxAgAB9AH3AgAB/wH0
+        AQcB7AH3AfQB/wG8AewBkgHyAf8DAAGuDAABrgHwBwAB8AFsAbUDGQEJAWwB8AEAAa4DAAHxAWwBCQEZ
+        Aa4B7QMAAa4B8AEAAf8B9AEHAewB7wH0Af8BAAH/AbwB7AGSAfIB/wIAAfABkQH/CQABvAGRAf8IAAHz
+        Aa4BtAMZAbQBrgEAAfABkQH/AQAB/wH3Aa4BtAGuAf8CAAG8AZEB/wEAAfQBBwHsAe8B9AH/AgAC/wG8
+        AewBkgHyAf8CAAHvAZEIAAEHAZELAAH0AWwBkQEZAQkBbAEHAgAB7wGRAwABrgFsAfECAAEHAZEDAAG8
+        AewB9wH0Af8EAAL/AbwC7AH0AwAB8AGuAQcB8wH0AfUB8wHwAZEB7wH0DAAB9AKRAYsBBwH/AwAB8AGu
+        AQcB8wHuAe0B8wHwAZEB7wH0AwAB9AHvAfQB/wYAAv8BBwG8Af8FAAG8Aa4CbAGLAe8B9A8AAf8BrgEH
+        BwABvAGuAmwBiwHvAfQUAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/gQAB4AEH
+        AQABHwHgAQcBjwHwAeIBIwEAAf8C4wGHAeABjAExAYAB/wGPAfEBgwHAAZgBGAGAAX8BnwH4AYEBgAE4
+        AQwBgAI/AfwBgAGBATABDgGAAR8BAAECAcABAwEgAQYBgAEPAQABAgHgAQcBIAECAeABDwEgAQIB+AEf
+        AQABAgHgAQMBIAECAfABDwEAAQIB+AEDATABDgHgAQcCAAH4AQABMAEMAcABAwG/AfwB/gEAAbgBHAGA
+        AYEBjwH4Af8BAAGIARgBgQGAAc8B8wH/AYABzgEzAYMBwAHgAQMB/wHAAeABAwGHAeAB+AEPAf8B4wH4
+        AQ8C/ws=
+</value>
+  </data>
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
